# pythonProject_kurs

./: README.md  pyproject.toml
main/: functions.py  main_code.py  test_data.json
tests/: test_functions.py
