[tool.poetry]
name = "pythonproject3-kurs"
version = "0.1.0"
description = ""
authors = ["Mariam Tamrazyan <mart76901@gmail.com>"]
readme = "README.md"
packages = [{include = "pythonproject3_kurs"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"

[tool.poetry.group.dev.dependencies]
pytest-cov = "4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
